force-app/main/default/objects/Reverse_Relationship__mdt/Reverse_Relationship__mdt.object-meta.xml
<CustomObject>
    <label>Reverse Relationship</label>
    <pluralLabel>Reverse Relationships</pluralLabel>
</CustomObject>