force-app/main/default/objects/Reverse_Relationship__mdt/fields/femaleRevCode__c.field-meta.xml
<CustomField>
    <fullName>femaleRevCode__c</fullName>
    <label>femaleRevCode</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>