force-app/main/default/objects/Reverse_Relationship__mdt/fields/genderCode__c.field-meta.xml
<CustomField>
    <fullName>genderCode__c</fullName>
    <description>To Identify the gender of the relationship</description>
    <label>genderCode</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>F</fullName>
                
                    <default>true</default>
                
                    <label>F</label>
                
                </value>
            
                <value>
                
                    <fullName>M</fullName>
                
                
                    <label>M</label>
                
                </value>
            
                <value>
                
                    <fullName>B</fullName>
                
                
                    <label>B</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>