force-app/main/default/objects/Reverse_Relationship__mdt/fields/maleRevCode__c.field-meta.xml
<CustomField>
    <fullName>maleRevCode__c</fullName>
    <label>maleRevCode</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>