force-app/main/default/objects/Reverse_Relationship__mdt/fields/relType__c.field-meta.xml
<CustomField>
    <fullName>relType__c</fullName>
    <label>relType</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>