force-app/main/default/objects/Reverse_Relationship__mdt/listViews/All_Values.listView-meta.xml
<ListView>
    <fullName>All_Values</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>femaleRevCode__c</columns>
    <columns>maleRevCode__c</columns>
    <columns>relType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Values</label>
    <language>en_US</language>
</ListView>