force-app/main/default/objects/Reverse_Relationship__mdt/listViews/Rev_rel.listView-meta.xml
<ListView>
    <fullName>Rev_rel</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>relType__c</columns>
    <columns>genderCode__c</columns>
    <columns>femaleRevCode__c</columns>
    <columns>maleRevCode__c</columns>
    <filterScope>Everything</filterScope>
    <label>Rev rel</label>
    <language>en_US</language>
</ListView>